--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CV</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="assets/styles/css/style.css">
 </head>
 <body>
   <nav class="navbar  navbar-expand-lg bg-body-tertiary " data-bs-theme="dark">
@@ -23,6 +24,9 @@
           </li>
           <li class="nav-item"> 
             <a class="nav-link" href="#">Experiencia</a>
+          </li>
+          <li class="nav-item"> 
+            <a class="nav-link" href="#">Contacto</a>
           </li>
         </ul>
       </div>
@@ -51,6 +55,18 @@
       </section>
       <h2 class="p-2 mt-3">Experiencia</h2>
       <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit expedita neque velit. Nobis impedit harum error, tempora corporis labore nam pariatur hic repellat nemo nulla neque accusantium reprehenderit, amet quae vitae incidunt corrupti magni ipsum ab voluptate? Inventore dolore cupiditate error aliquam eveniet eum quasi consequuntur reiciendis temporibus, officiis quia!</span>
+    </div>
+  </section>
+  <section class="container mt-4">
+    <h2 class="text-center">Contacto</h2>
+    <div class="mb-3">
+      <label for="exampleFormControlInput1" class="form-label">Nombre</label>
+      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Name">
+    </div>
+    <div class="mb-3">
+      <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
+      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      <button type="button" class="btn btn-secondary btn-lg mt-3">Enviar</button>
     </div>
   </section>
   <footer class="footer text-bg-light mt-auto">
